updated tests and swagger
